--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body style="background-color: darkred;">
   <div class="container-fluid p-0">
     <nav class="navbar navbar-expand">
-      <div class="container-fluid px-md-5 px-0 pt-4 fs-5 fw-bold text-uppercase">
+      <div class="container-fluid px-md-4 px-0 pt-4 fs-5 fw-bold text-uppercase">
         <ul class="navbar-nav gap-5">
           <li class="nav-item"><a class="nav-link link-light" href="#">My orders</a></li>
           <li class="nav-item"><a class="nav-link link-danger" href="#">Menu</a></li>
@@ -29,10 +29,9 @@
     </div>
 
     <main class="container-fluid text-center mt-5">
-      <div class="row">
+      <div class="row w-100 mx-auto">
         <div class="col-lg-4 col-md-6 mb-5">
           <img class="image-fluid rounded-3 w-75" src="assets/ramen1.jpg" alt="Ramen">
-          
         </div>
         <div class="col-lg-4 col-md-6 mb-5">
           <img class="image-fluid rounded-3 w-75" src="assets/ramen2.jpg" alt="Ramen">
@@ -61,8 +60,8 @@
         <h1 class="fw-bold display-5">Ingredients</h1>
       </div>
 
-      <div class="row w-100 justify-content-center">
-        <div class="col-lg-5 col-md-12 rounded text-light p-5 border-bottom border-2 m-5">
+      <div class="row w-100 justify-content-center gap-5 mx-auto">
+        <div class="col-lg-5 col-md-12 rounded text-light p-5 border-bottom border-2">
           <h1>Akayu</h1>
           <ul>
             <li>Soy sauce</li>
@@ -74,7 +73,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-5 col-md-12 rounded text-light p-5 border-bottom border-2 m-5">
+        <div class="col-lg-5 col-md-12 rounded text-light p-5 border-bottom border-2">
           <h2>Asahikawa</h2>
           <ul>
             <li>Chicken</li>
@@ -90,7 +89,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-5 col-md-12 rounded text-light p-5 border-bottom border-2 m-5">
+        <div class="col-lg-5 col-md-12 rounded text-light p-5 border-bottom border-2">
           <h2>Hiroshima</h2>
           <ul>
             <li>Chicken bones</li>
@@ -102,7 +101,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-5 col-md-12 rounded text-light p-5 border-bottom border-2 m-5">
+        <div class="col-lg-5 col-md-12 rounded text-light p-5 border-bottom border-2">
           <h2>Shoyu</h2>
           <ul>
             <li>Ginger</li>
@@ -119,7 +118,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-5 col-md-12 rounded text-light p-5 border-bottom border-2 m-5">
+        <div class="col-lg-5 col-md-12 rounded text-light p-5 border-bottom border-2">
           <h2>Shio</h2>
           <ul>
             <li>Kombu</li>
@@ -142,7 +141,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-5 col-md-12 rounded text-light p-5 border-bottom border-2 m-5">
+        <div class="col-lg-5 col-md-12 rounded text-light p-5 border-bottom border-2">
           <h2>Miso</h2>
           <ul>
             <li>Ground chicken</li>
