--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Menu Bootstrap</title>
 </head>
 <body style="background-color: darkred;">
-  <div class="container-fluid p-0">
+  <div class="container-fluid p-0 w-100">
     <nav class="navbar navbar-expand">
       <div class="container-fluid px-md-4 px-0 pt-4 fs-5 fw-bold text-uppercase">
         <ul class="navbar-nav gap-5">
@@ -161,8 +161,8 @@
       </div>
     </div>
 
-    <div class="bg-black pt-5 p-2">
-      <div class="row d-flex justify-content-center m-0 text-light grid gap-1">
+    <div class="bg-black pt-5 p-2 w-100">
+      <div class="row d-flex justify-content-center m-0 text-light grid gap-1 w-100">
         <div class="col-2 m-0">
           <img style="width: 75px; height: 75px;" src="assets/sun.png" alt="Sun">
         </div>
