--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Menu Bootstrap</title>
 </head>
 <body style="background-color: darkred;">
-  <div class="container-fluid p-0 w-100">
+  <div class="container-fluid p-0">
     <nav class="navbar navbar-expand">
       <div class="container-fluid px-md-4 px-0 pt-4 fs-5 fw-bold text-uppercase">
         <ul class="navbar-nav gap-5">
@@ -50,7 +50,6 @@
           <img class="image-fluid rounded-3 w-75" src="assets/ramen6.jpg" alt="Ramen">
         </div>
       </div>
-
     </main>
     
     <div class="bg-danger w-50 p-1 rounded-5 mx-auto my-5"></div>
@@ -161,9 +160,9 @@
       </div>
     </div>
 
-    <div class="bg-black pt-5 p-2 w-100">
-      <div class="row d-flex justify-content-center m-0 text-light grid gap-1 w-100">
-        <div class="col-2 m-0">
+    <div class="bg-black pt-5 w-100">
+      <div class="row d-flex justify-content-center m-0 text-light grid gap-1">
+        <div class="col-md-2 m-0">
           <img style="width: 75px; height: 75px;" src="assets/sun.png" alt="Sun">
         </div>
         <div class="col-md-2 col-sm-12 m-0 mb-sm-4">
