--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
       <p class="fs-5">Hover over the different dishes to discover our types of RAMEN!</p>
     </div>
 
-    <main class="container-fluid text-center mt-5">
+    <main class="container-fluid text-center mt-5 p-0">
       <div class="row w-100 mx-auto">
-        <div class="col-lg-4 col-md-6 mb-5">
+        <div class="col-lg-4 col-md-6 mb-5 p-0">
           <img class="image-fluid rounded-3 w-75" src="assets/ramen1.jpg" alt="Ramen">
         </div>
-        <div class="col-lg-4 col-md-6 mb-5">
+        <div class="col-lg-4 col-md-6 mb-5 p-0">
           <img class="image-fluid rounded-3 w-75" src="assets/ramen2.jpg" alt="Ramen">
         </div>
-        <div class="col-lg-4 col-md-6 mb-5">
+        <div class="col-lg-4 col-md-6 mb-5 p-0">
           <img class="image-fluid rounded-3 w-75" src="assets/ramen3.jpg" alt="Ramen">
         </div>
 
-        <div class="col-lg-4 col-md-6 mb-5">
+        <div class="col-lg-4 col-md-6 mb-5 p-0">
           <img class="image-fluid rounded-3 w-75" src="assets/ramen4.jpg" alt="Ramen">
         </div>
-        <div class="col-lg-4 col-md-6 mb-5">
+        <div class="col-lg-4 col-md-6 mb-5 p-0">
           <img class="image-fluid rounded-3 w-75" src="assets/ramen5.jpg" alt="Ramen">
         </div>
-        <div class="col-lg-4 col-md-6 mb-5">
+        <div class="col-lg-4 col-md-6 mb-5 p-0">
           <img class="image-fluid rounded-3 w-75" src="assets/ramen6.jpg" alt="Ramen">
         </div>
       </div>
