--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container-fluid p-0">
     <nav class="navbar navbar-expand">
       <div class="container-fluid px-md-4 px-0 pt-4 fs-5 fw-bold text-uppercase">
-        <ul class="navbar-nav gap-5">
+        <ul class="navbar-nav gap-md-5">
           <li class="nav-item"><a class="nav-link link-light" href="#">My orders</a></li>
           <li class="nav-item"><a class="nav-link link-danger" href="#">Menu</a></li>
         </ul>
