--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body style="background-color: darkred;">
   <div class="container-fluid p-0">
     <nav class="navbar navbar-expand">
-      <div class="container-fluid px-md-4 px-0 pt-4 fs-5 fw-bold text-uppercase">
-        <ul class="navbar-nav gap-md-5">
+      <div class="container-fluid px-md-4 px-0 pt-4 fs-5 fw-bold text-uppercase text-center">
+        <ul class="navbar-nav gap-md-4">
           <li class="nav-item"><a class="nav-link link-light" href="#">My orders</a></li>
           <li class="nav-item"><a class="nav-link link-danger" href="#">Menu</a></li>
         </ul>
@@ -59,7 +59,7 @@
         <h1 class="fw-bold display-5">Ingredients</h1>
       </div>
 
-      <div class="row w-100 justify-content-center gap-5 mx-auto">
+      <div class="row w-100 justify-content-center gap-5 mx-auto p-0">
         <div class="col-lg-5 col-md-12 rounded text-light p-5 border-bottom border-2">
           <h1>Akayu</h1>
           <ul>
