--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       </div>  
       <div class="row w-75 text-start ms-1 mt-4 grid mx-md-auto ms-sm-1 text-white-50 fst-normal">
         <div class="col-9 col-md-12">
-          <div class="row text-sm-start">
+          <div class="row text-sm-start text-md-center">
             <div class="col-lg-2 col-md-4"><p>Juridisk information</p></div>
             <div class="col-lg-2 col-md-4"><p>Integritetscenter</p></div>
             <div class="col-lg-2 col-md-4"><p>Integritetspolicy</p></div>
