--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
       </div>
     </div>
 
-    <div class="bg-black pt-5 w-100">
+    <div class="bg-black pt-5 w-100 pb-5">
       <div class="row d-flex justify-content-center m-0 text-light grid gap-1">
-        <div class="col-md-2 m-0">
+        <div class="col-md-2 m-0 mb-5 text-sm-start text-center">
           <img style="width: 75px; height: 75px;" src="assets/sun.png" alt="Sun">
         </div>
         <div class="col-md-2 col-sm-12 m-0 mb-sm-4">
